--- a/package.json
+++ b/package.json
@@ -17,25 +17,25 @@
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "axios": "^1.7.7",
-    "formik": "^2.4.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
-    "sass": "^1.77.8",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.0",
-    "yup": "^1.4.0",
-    "mercadopago": "^2.0.14",
-    "react-spinners": "^0.14.1",
     "eslint": "^9.8.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "formik": "^2.4.6",
+    "globals": "^15.9.0",
+    "mercadopago": "^2.0.14",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
+    "react-spinners": "^0.14.1",
+    "sass": "^1.77.8",
+    "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
-    "globals": "^15.9.0"
+    "vite": "^5.4.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "@eslint/js": "^9.8.0"
+    "@eslint/js": "^9.8.0",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0"
   }
 }
