--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.8",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
