--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mercadopago": "^2.0.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.13",
     "react-router-dom": "^6.26.0",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
